--- a/index.html
+++ b/index.html
@@ -6,7 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
+            <ul>
+            <li><a href="./index.html" alt=""></a>Product</li>
+            <li><a href="./pricing.html" alt=""></a>Pricing</li>
+            <li><a href="./customer.html" alt=""></a>Customers</li>
+            <li><a href="" alt=""></a>Resources</li>
+            </ul>
+            <ul>
+                <li><button type="button">Sign In</button></li>
+                <li><button type="button">Sign Up</button></li>
+            </ul>
+        </nav>
+
+    </header>
     <main>
         <section></section>
         <section></section>
