--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav>
             <a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
             <ul>
-            <li><a href="./index.html" alt=""></a>Product</li>
-            <li><a href="./pricing.html" alt=""></a>Pricing</li>
-            <li><a href="./customer.html" alt=""></a>Customers</li>
-            <li><a href="" alt=""></a>Resources</li>
+                <li><a href="./index.html" alt="">Product</a></li>
+                <li><a href="./pricing.html" alt="">Pricing</a></li>
+                <li><a href="./customer.html" alt="">Customers</a></li>
+                <li><a href="" alt=""></a>Resources</li>
             </ul>
             <ul>
                 <li><button type="button">Sign In</button></li>
@@ -23,18 +25,266 @@
 
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <!--work-->
+
+        <section>
+            <h1>Work at the speed of thought</h1>
+            <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your
+                next user
+                experience.</p>
+            <img src="images/hero-img.png" alt="hero">
+            <button type="button">Get started</button>
+            <button type="button">Watch the Video</button>
         </section>
+        <!--work end-->
+
+        <!--product-->
+
+        <section>
+
+            <h2>Product was Built Specifically for You</h2>
+            <ul>
+                <li>
+                    <h3>First click tests</h3>
+                    <p>While most people enjoy casino gambling,</p>
+                </li>
+                <li>
+                    <h3>Design surveys</h3>
+                    <p>Sports betting, lottery and bingo playing for the fun</p>
+                </li>
+                <li>
+                    <h3>Preference tests</h3>
+                    <p>The Myspace page defines the individual.</p>
+                </li>
+                <li>
+                    <h3>Five second tests</h3>
+                    <p>Personal choices and the overall personality of the person. </p>
+                </li>
+            </ul>
+        </section>
+
+        <!--product end-->
+
+        <!--Management-->
+
+        <section>
+            <h2><span>Effortless Validation for</span>Management</h2>
+            <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the
+                overall
+                personality of the person.</p>
+            <img src="images/management-img.png" alt="management">
+            <ul>
+                <li>
+                    <h3>Accessory makers</h3>
+                    <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                    </p>
+                </li>
+                <li>
+                    <h3>Alterationists</h3>
+                    <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                </li>
+            </ul>
+        </section>
+
+        <!--Management end-->
+
+        <!--Customer Support-->
+
+        <section>
+            <h3>Easier decision making for <span>Customer Support</span></h3>
+            <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the
+                overall
+                personality of the person.</p>
+            <img src="images/support-img.png" alt="support">
+            <ul>
+                <li>
+                    <p>Never worry about overpaying for your energy again. </p>
+                </li>
+                <li>
+                    <p>We will only switch you to energy companies that we trust and will treat you right</p>
+                </li>
+                <li>
+                    <p>We track the markets daily and know where the savings are.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!--Customer Support end-->
+
+        <!--Collaborative-->
+
+        <section>
+            <h2>Optimisation for <span>Collaborative</span></h2>
+            <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face
+                a double
+                standard when it comes to their behavior.</p>
+            <img src="images/collaboration-img.png" alt="collaborative">
+            <ul>
+                <li>
+                    <h3>Accessory makers</h3>
+                    <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun
+                    </p>
+                </li>
+                <li>
+                    <h3>Alterationists</h3>
+                    <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                </li>
+            </ul>
+        </section>
+
+        <!--Collaborative end-->
+
+        <!--Easy Process-->
+
+        <section>
+            <h2>Quick & Easy Process</h2>
+            <p>Do you require some help for your project: Conception workshop, prototyping, marketing strategy, landing
+                page, Ux/UI?</p>
+            <ul>
+                <li>
+                    <img src="images/avatar.png" alt="team1">
+                    <p>I can take care of your pitch</p>
+                </li>
+                <li>
+                    <img src="images/avatar2.png" alt="team2">
+                    <p>I can prototype your app</p>
+                </li>
+                <li>
+                    <img src="images/avatar1.png" alt="team3">
+                    <p>I can take care of your pitch</p>
+                </li>
+                <li>
+                    <img src="images/avatar3.png" alt="team4">
+                    <p>I can help marketing strategy</p>
+                </li>
+            </ul>
+        </section>
+
+        <!--Easy Process end-->
+
+        <!--Contents Strategies-->
+        <section>
+            <h2>Contents Strategies</h2>
+            <p>We focus on ergonomics and meeting you where you work. It's only a keystroke away.</p>
+            <ul>
+                <li>
+                    <img src="images/image.png" alt="computer">
+                    <p>By Wahid Ari | 03 March 2019</p>
+                    <h3>Increasing Prosperity With Positive Thinking</h3>
+                </li>
+                <li>
+                    <img src="images/Bitmap-1.png" alt="people">
+                    <p>By Wahid Ari | 03 March 2019</p>
+                    <h3>Motivation Is The First Step To Success</h3>
+                </li>
+                <li>
+                    <img src="images/Bitmap.png" alt="bild">
+                    <p>By Wahid Ari | 03 March 2019</p>
+                    <h3>Success Steps For Your Personal Or Business</h3>
+                </li>
+            </ul>
+        </section>
+        <!--Contents Strategies end-->
+
+        <!--Price Table-->
+
+        <section>
+            <h2>Price Table</h2>
+            <p>We offer competitive price</p>
+            <ul>
+                <li>
+                    <h3>Free</h3>
+                    <p>Brief price description</p>
+                    <p>0$ Per / month</p>
+                    <p>Only 2 Operators</p>
+                    <p>Notifications</p>
+                    <p>Landing Pages</p>
+                    <bottom type="bottom">Order Now</bottom>
+                </li>
+                <li>
+                    <h3>Standard</h3>
+                    <p>Brief price description</p>
+                    <p>5$ Per / month</p>
+                    <p>5+ Operators</p>
+                    <p>Notifications</p>
+                    <p>Landing Pages</p>
+                    <bottom type="bottom">Order Now</bottom>
+                </li>
+                <li>
+                    <h3>Premium</h3>
+                    <p>Brief price description</p>
+                    <p>10$ Per / month</p>
+                    <p>10+ Operators</p>
+                    <p>Notifications</p>
+                    <p>Landing Pages</p>
+                    <bottom type="bottom">Order Now</bottom>
+                </li>
+            </ul>
+        </section>
+
+        <!--Price Table end-->
+
+        <!--What Clients Say-->
+
+        <section>
+            <h2>What Clients Say</h2>
+            <p>Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian
+                mechanics</p>
+            <ul>
+                <li>
+                    <img src="images/star.png" alt="star">
+                    <p>Product helps you see how many more days you need to work to reach your financial goal.</p>
+                    <h3>Wahid Ari</h3>
+                    <p>Designer</p>
+                </li>
+                <li>
+                    <img src="images/star.png" alt="star">
+                    <p>Product helps you see how many more days you need to work to reach your financial goal.</p>
+                    <h3>Wahid Ari</h3>
+                    <p>Designer</p>
+                </li>
+                <li>
+                    <img src="images/star.png" alt="star">
+                    <p>Product helps you see how many more days you need to work to reach your financial goal.</p>
+                    <h3>Wahid Ari</h3>
+                    <p>Designer</p>
+                </li>
+            </ul>
+        </section>
+
+        <!--What Clients Say-->
+
+        <!--join-->
+
+        <section>
+            <h2>Join 100 Compannies who boost their business with Product</h2>
+            <img src="images/graphics.png" alt="graphics">
+            <bottom type="bottom">Get This</bottom>
+        </section>
+
+        <!--join end-->
+
     </main>
-    <footer></footer>
+    <footer>
+        <a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
+        <ul>
+            <li>
+                <h3>Resource</h3>
+                <a href="">About Us</a>
+                <a href="">Blog</a>
+                <a href="">Contact</a>
+                <a href="">FAQ</a>
+            </li>
+            <li>
+                <h3>Legal Stuff</h3>
+                <a href="">Disclaimer</a>
+                <a href="">Financing</a>
+                <a href="">Privacy Policy</a>
+            </li>
+            <p>Made With Love By Figmaland All Right Reserved</p>
+        </ul>
+    </footer>
 </body>
+
 </html>
