--- a/pricing.html
+++ b/pricing.html
@@ -12,9 +12,9 @@
     <nav>
         <a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
         <ul>
-            <li><a href="./index.html" alt=""></a>Product</li>
-            <li><a href="./pricing.html" alt=""></a>Pricing</li>
-            <li><a href="./customer.html" alt=""></a>Customers</li>
+            <li><a href="./index.html" alt="">Product</a></li>
+            <li><a href="./pricing.html" alt="">Pricing</a></li>
+            <li><a href="./customer.html" alt="">Customers</a>Customers</li>
             <li><a href="" alt=""></a>Resources</li>
         </ul>
         <ul>
@@ -29,6 +29,22 @@
 <section></section>
 <
 </main>
-<footer></footer>
+<footer><a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
+<ul>
+    <li>
+        <h3>Resource</h3>
+        <a href="">About Us</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+        <a href="">FAQ</a>
+    </li>
+    <li>
+        <h3>Legal Stuff</h3>
+        <a href="">Disclaimer</a>
+        <a href="">Financing</a>
+        <a href="">Privacy Policy</a>
+    </li>
+    <p>Made With Love By Figmaland All Right Reserved</p>
+</ul></footer>
 </body>
 </html>
