--- a/pricing.html
+++ b/pricing.html
@@ -25,9 +25,93 @@
 
 </header>
 </main>
- <section></section>
-<section></section>
-<
+ <section>
+    <div>
+    <h1>Our Clients</h1>
+    <ul>
+        <li><img src="images/Airbnb Logo.png" alt="Airbnb"></li>
+        <li><img src="images/Google Logo.png" alt="Google"></li>
+        <li><img src="images/Microsoft Logo.png" alt="Microsoft"></li>
+        <li><img src="images/FedEx Logo.png" alt="FedEx"></li>
+    </ul>
+</div>
+ </section>
+<section>
+<h2>Why Choose Product?</h2>
+<ul>
+    <li>
+        <div>
+            <img src="images/icon.png" alt="icon">
+            <h3>Special Business</h3>
+            <p>Product helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="images/icon-1.png" alt="icon1">
+            <h3>Instant Result</h3>
+            <p>Product helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+        </div>
+    </li>
+    <li>
+        <div>
+            <img src="images/icon-2.png" alt="icon2">
+            <h3>Fastest way to organize</h3>
+            <p>Product helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+        </div>
+    </li>
+</ul>
+</section>
+<section>
+<h2>How Product Work?</h2>
+<ul>
+    <li>
+        <img src="images/mac1.png" alt="mac1">
+        <h4>STEP 1</h4>
+        <h3>Apply for a product</h3>
+        <p>Completing our easy step-by-step application form gives you access to multiple business with multiple products. We
+        analyse your business through our proprietary credit analysis technology</p>
+    </li>
+    <li>
+        <img src="images/mac2.png" alt="mac2">
+        <h4>STEP 2</h4>
+        <h3>Pay fully refundable</h3>
+        <p>Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available,
+        your fee will be fully refunded.</p>
+    </li>
+    <li>
+        <img src="images/mac3@2x.png" alt="mac3">
+        <h4>STEP 3</h4>
+        <h3>Completion</h3>
+        <p>Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
+    </li>
+</ul>
+<button type="button">Get in touch with us</button>
+</section>
+<section>
+    <h2>Join thousand of other who have already received offers</h2>
+    <ul>
+        <li>
+            <img src="images/Image Placeholder.png" alt="Placeholder">
+            <h3>Business</h3>
+            <p>Cash Flow Asset Backed Receivables Finance</p>
+            <p>Find the best business product</p>
+        </li>
+        <li>
+            <img src="images/Image Placeholder1.png" alt="Placeholder1">
+            <h3>Enterprise</h3>
+            <p>Site Acquisition Bridge Development Financing</p>
+            <p>Find the best business product</p>
+        </li>
+    </ul>
+</section>
+<section>
+    <div>
+    <h2>Join 100 Compannies who boost their business with Product</h2>
+    <button type="button">Get This</button>
+    <img src="images/graphics.png" alt="graphics">
+</div>
+</section>
 </main>
 <footer><a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
 <ul>
