--- a/pricing.html
+++ b/pricing.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="./index.html" alt="">Product</a></li>
             <li><a href="./pricing.html" alt="">Pricing</a></li>
-            <li><a href="./customer.html" alt="">Customers</a>Customers</li>
+            <li><a href="./customer.html" alt="">Customers</a></li>
             <li><a href="" alt=""></a>Resources</li>
         </ul>
         <ul>
