add css page 3 sectionn one

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="item-header-one"><a class="link-header" href="./index.html" alt="">Product</a></li>
                     <li class="item-header"><a class="link-header" href="./pricing.html" alt="">Pricing</a></li>
                     <li class="item-header"><a class="link-header" href="./customer.html" alt="">Customers</a></li>
-                    <li class="item-header"><a class="link-header" href="" alt="">Resources</a></li>
+                    <li class="item-header"><a class="link-header" href="./resourses.html" alt="">Resources</a></li>
                 </ul>
                 </nav>
                 <ul class="list-button-header">
@@ -273,7 +273,13 @@
                     <li class="price-item">
                         <h3 class="price-title-item">Free</h3>
                         <p class="price-text-item-one">Brief price description</p>
-                        <p class="price-text-item-two"><span class="span-one">0</span><span class="span-two">$</span> Per / month</p>
+                        <div class="div-price">
+                        <p class="span-one">0</p>
+                        <div class="div-price-sec">
+                            <p class="span-two">$</p>
+                            <p class="price-text-item-two">Per / month</p>
+                        </div>
+                    </div>
                         <ul class="price-list-item">
                             <li><p class="price-text-item-list">Only 2 Operators</p></li>
                             <li><p class="price-text-item-list">Notifications</p></li>
@@ -282,21 +288,33 @@
                         </ul>
                         <bottom class="bottom-price" type="bottom">Order Now</bottom>
                     </li>
-                    <li class="price-item">
+                    <li class="price-item price-item-two">
                         <h3 class="price-title-item">Standard</h3>
                         <p class="price-text-item-one">Brief price description</p>
-                        <p class="price-text-item-two"><span class="span-one">5</span><span class="span-two">$</span> Per / month</p>
+                        <div class="div-price">
+                            <p class="span-one price-span">5</p>
+                            <div class="div-price-sec">
+                                <p class="span-two price-span">$</p>
+                                <p class="price-text-item-two price-span">Per / month</p>
+                            </div>
+                        </div>
                         <ul class="price-list-item">
-                            <li><p class="price-text-item-list">5+ Operators</p></li>
-                            <li><p class="price-text-item-list">Notifications</p></li>
-                            <li><p class="price-text-item-list">Landing Pages</p></li>
+                            <li><p class="price-text-item-list list-price">5+ Operators</p></li>
+                            <li><p class="price-text-item-list list-price">Notifications</p></li>
+                            <li><p class="price-text-item-list list-price">Landing Pages</p></li>
                            
                         </ul> <bottom class="bottom-price" type="bottom">Order Now</bottom>
                     </li>
                     <li class="price-item">
                         <h3 class="price-title-item">Premium</h3>
                         <p class="price-text-item-one">Brief price description</p>
-                        <p class="price-text-item-two"><span class="span-one">10</span><span class="span-two">$</span> Per / month</p>
+                    <div class="div-price">
+                        <p class="span-one">10</p>
+                        <div class="div-price-sec">
+                            <p class="span-two">$</p>
+                            <p class="price-text-item-two">Per / month</p>
+                        </div>
+                    </div>
                         <ul class="price-list-item">
                             <li><p class="price-text-item-list">10+ Operators</p></li>
                         <li><p class="price-text-item-list">Notifications</p></li>
