--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
             <li><a href="./index.html" alt="">Product</a></li>
             <li><a href="./pricing.html" alt="">Pricing</a></li>
             <li><a href="./customer.html" alt="">Customers</a></li>
-            <li><a href="" alt=""></a>Resources</li>
+            <li><a href="./resourses.html" alt=""></a>Resources</li>
         </ul>
         <ul>
             <li><button type="button">Sign In</button></li>
