add css second page

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a class="logo-header" href="./index.html"><img class="logo-image-header" src="images/logo.png" alt="logo">Product</a>
                 <ul class="list-header">
                     <li class="item-header-one"><a class="link-header" href="./index.html" alt="">Product</a></li>
+                    <li class="item-header"><a class="link-header" href="./customers.html" alt="">Customers</a></li>
                     <li class="item-header"><a class="link-header" href="./pricing.html" alt="">Pricing</a></li>
-                    <li class="item-header"><a class="link-header" href="./customer.html" alt="">Customers</a></li>
                     <li class="item-header"><a class="link-header" href="./resourses.html" alt="">Resources</a></li>
                 </ul>
                 </nav>
