--- a/resourses.html
+++ b/resourses.html
@@ -43,7 +43,7 @@
             <h2 class="great-business-title">Great Business made with Product.</h2>
             <p class="great-business-text">Build better customer relationships easily messaging that provides a more personal experience for you and your
             customers.</p>
-            <form class="great-business-form" action="">
+            <form class="great-business-form">
             <label class="great-business-label">
             <input class="great-business-input" type="user-email" placeholder="Enter your email adress">
             <button class="great-business-button">Join Now</button>
