--- a/pricing.html
+++ b/pricing.html
@@ -1,134 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+        integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/customers.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@500&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
-<body>
-  <header></header> 
-  <main>
-    <header>
-    <nav>
-        <a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
-        <ul>
-            <li><a href="./index.html" alt="">Product</a></li>
-            <li><a href="./pricing.html" alt="">Pricing</a></li>
-            <li><a href="./customer.html" alt="">Customers</a></li>
-            <li><a href="./resourses.html" alt=""></a>Resources</li>
-        </ul>
-        <ul>
-            <li><button type="button">Sign In</button></li>
-            <li><button type="button">Sign Up</button></li>
-        </ul>
-    </nav>
 
-</header>
-</main>
- <section>
-    <div>
-    <h1>Our Clients</h1>
-    <ul>
-        <li><img src="images/Airbnb Logo.png" alt="Airbnb"></li>
-        <li><img src="images/Google Logo.png" alt="Google"></li>
-        <li><img src="images/Microsoft Logo.png" alt="Microsoft"></li>
-        <li><img src="images/FedEx Logo.png" alt="FedEx"></li>
-    </ul>
-</div>
- </section>
-<section>
-<h2>Why Choose Product?</h2>
-<ul>
-    <li>
-        <div>
-            <img src="images/icon.png" alt="icon">
-            <h3>Special Business</h3>
-            <p>Product helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+<body>
+    <header class="header">
+        <div class="container header-container">
+            <nav class="nav-header">
+                <a class="logo-header" href="./index.html"><img class="logo-image-header" src="images/logo.png"
+                        alt="logo">Product</a>
+                <ul class="list-header">
+                    <li class="item-header"><a class="link-header" href="./index.html" alt="">Product</a></li>
+                    <li class="item-header-one"><a class="link-header" href="./customers.html" alt="">Customers</a></li>
+                    <li class="item-header"><a class="link-header" href="./pricing.html" alt="">Pricing</a></li>
+                    <li class="item-header"><a class="link-header" href="./resourses.html" alt="">Resources</a></li>
+                </ul>
+            </nav>
+            <ul class="list-button-header">
+                <li class="item-link-header"><button class="button-header-one" type="button">Sign In</button></li>
+                <li class="item-link-header"><button class="button-header-two" type="button">Sign Up</button></li>
+            </ul>
         </div>
-    </li>
-    <li>
-        <div>
-            <img src="images/icon-1.png" alt="icon1">
-            <h3>Instant Result</h3>
-            <p>Product helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+    </header>
+    <main>
+        <section>
+            <p>PRICING</p>
+        <h2>Let’s get some real work done here.</h2>
+        <p>Prodict is your perfect solution for working. Get started now for free</p>
+        <ul>
+            <li>
+                <h3>Free</h3>
+                <p>Brief price description</p>
+                <p>0$ Per / month</p>
+                <p>Only 2 Operators</p>
+                <p>Notifications</p>
+                <p>Landing Pages</p>
+                <bottom type="bottom">Order Now</bottom>
+            </li>
+            <li>
+                <h3>Standard</h3>
+                <p>Brief price description</p>
+                <p>5$ Per / month</p>
+                <p>5+ Operators</p>
+                <p>Notifications</p>
+                <p>Landing Pages</p>
+                <bottom type="bottom">Order Now</bottom>
+            </li>
+            <li>
+                <h3>Premium</h3>
+                <p>Brief price description</p>
+                <p>10$ Per / month</p>
+                <p>10+ Operators</p>
+                <p>Notifications</p>
+                <p>Landing Pages</p>
+                <bottom type="bottom">Order Now</bottom>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <p>ENTERPRISE</p>
+        <h2>Are you interested in a custom-tailored plan?</h2>
+        <p>Product is a set of advanced features for really large teams with projects.</p>
+        <button type="button">Get in touch with us</button>
+    </section>
+    <section>
+        <h2>Product is being used with great effects alongside:</h2>
+        <img src="images/amico.png" alt="amico">
+        <ul>
+            <li>
+                <img src="images/Feature Icon with circle-2.png" alt="features">
+                <h3>Enterpreneur</h3>
+                <p>Product is a great way to help medium and samall enterprise owners achieve their goals</p>
+            </li>
+            <li>
+                <img src="images/Feature Icon with circle.png" alt="features1">
+                <h3>Accountants</h3>
+                <p>Whether you are working on contract with clients, or on other key accounting documents, Product is for you</p>
+            </li>
+            <li>
+                <img src="images/Feature Icon with circle-1.png" alt="features2">
+                <h3>Universities</h3>
+                <p>Organize university projects and have documents easily graded online with Product</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Frequently asked question</h2>
+        <p>Something is not clear? You need help? Check our FAQ section</p>
+        <ul>
+            <li>
+                <img src="images/plus_circle.png" alt="plus">
+                <h3>What are my payment option?</h3>
+            </li>
+            <li>
+                <img src="images/minus_circle.png" alt="minus">
+                <h3>How can I invite collaborator to platform?</h3>
+                <p>After creating your account you will have an oppurtunity to create your first project that will be associated withthe
+                collaborators e-mail. An invitation will be sent automatically. Then, invited user will have to confirm his account by
+                e-mail and finish userd onboarding.</p>
+            </li>
+            <li>
+                <img src="images/plus_circle.png" alt="plus">
+                <h3>Can I upgrade my plan?</h3>
+            </li>
+            <li>
+                <img src="images/minus_circle.png" alt="minus">
+                <h3>Can I cancel my plan at anytime?</h3>
+            </li>
+        </ul>
+    </section>
+        <section>
+            <div>
+                <h2>Join 100 Compannies who boost their business with Product</h2>
+                <button type="button">Get This</button>
+                <img src="images/graphics.png" alt="graphics">
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container footer-container">
+            <div class="footer-container-impotant">
+                <div class="footer-container-one">
+                    <a class="link-footer" href="./index.html"><img src="images/logo.png" alt="logo" />Product</a>
+                    <ul class="list-icon">
+                        <li class="item-link-footer">
+                            <a class="link-footer-item" href=""><svg class="list-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg></a>
+                        </li>
+                        <li class="item-link-footer">
+                            <a class="link-footer-item" href=""><svg class="list-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="item-link-footer">
+                            <a class="link-footer-item" href=""><svg class="list-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-container-two">
+                    <p class="footer-text">Resource</p>
+                    <ul class="footer-list">
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">About Us</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">Blog</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">Contact</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">FAQ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-container-three">
+                    <p class="footer-text">Legal Stuff</p>
+                    <ul class="footer-list">
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">Disclaimer</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">Financing</a>
+                        </li>
+                        <li class="footer-item">
+                            <a class="footer-link-item" href="">Privacy Policy</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-container-four">
+                    <p class="footer-text">knowing you're always on the best energy deal.</p>
+                    <form class="footer-form ">
+                        <label class="label-footer" for="user-phone"></label>
+                        <div class="icon-div-footer">
+                            <input type="phone" class="user-phone" id="user-phone" placeholder="Enter your phone number"
+                                required>
+                            <svg class="icon-footer-form" width="16" height="24">
+                                <use href="./images/icons.svg#icon-mobile-screen"></use>
+                            </svg>
+                        </div>
+                    </form>
+                    <button class="button-footer" type="submit">Sign up Now</button>
+                </div>
+            </div>
+            <p class="footer-text-end">Made With Love By Figmaland All Right Reserved</p>
         </div>
-    </li>
-    <li>
-        <div>
-            <img src="images/icon-2.png" alt="icon2">
-            <h3>Fastest way to organize</h3>
-            <p>Product helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
-        </div>
-    </li>
-</ul>
-</section>
-<section>
-<h2>How Product Work?</h2>
-<ul>
-    <li>
-        <img src="images/mac1.png" alt="mac1">
-        <h4>STEP 1</h4>
-        <h3>Apply for a product</h3>
-        <p>Completing our easy step-by-step application form gives you access to multiple business with multiple products. We
-        analyse your business through our proprietary credit analysis technology</p>
-    </li>
-    <li>
-        <img src="images/mac2.png" alt="mac2">
-        <h4>STEP 2</h4>
-        <h3>Pay fully refundable</h3>
-        <p>Product will contactting you instantly to receive payment of the Application Fee. if no offer of product is available,
-        your fee will be fully refunded.</p>
-    </li>
-    <li>
-        <img src="images/mac3@2x.png" alt="mac3">
-        <h4>STEP 3</h4>
-        <h3>Completion</h3>
-        <p>Product will continue to liase between borrower and manager to procees and complete a quick and efficient settlement</p>
-    </li>
-</ul>
-<button type="button">Get in touch with us</button>
-</section>
-<section>
-    <h2>Join thousand of other who have already received offers</h2>
-    <ul>
-        <li>
-            <img src="images/Image Placeholder.png" alt="Placeholder">
-            <h3>Business</h3>
-            <p>Cash Flow Asset Backed Receivables Finance</p>
-            <p>Find the best business product</p>
-        </li>
-        <li>
-            <img src="images/Image Placeholder1.png" alt="Placeholder1">
-            <h3>Enterprise</h3>
-            <p>Site Acquisition Bridge Development Financing</p>
-            <p>Find the best business product</p>
-        </li>
-    </ul>
-</section>
-<section>
-    <div>
-    <h2>Join 100 Compannies who boost their business with Product</h2>
-    <button type="button">Get This</button>
-    <img src="images/graphics.png" alt="graphics">
-</div>
-</section>
-</main>
-<footer><a href="./index.html"><img src="images/logo.png" alt="logo">Product</a>
-<ul>
-    <li>
-        <h3>Resource</h3>
-        <a href="">About Us</a>
-        <a href="">Blog</a>
-        <a href="">Contact</a>
-        <a href="">FAQ</a>
-    </li>
-    <li>
-        <h3>Legal Stuff</h3>
-        <a href="">Disclaimer</a>
-        <a href="">Financing</a>
-        <a href="">Privacy Policy</a>
-    </li>
-    <p>Made With Love By Figmaland All Right Reserved</p>
-</ul></footer>
+    </footer>
 </body>
+
 </html>
