add css for 3 section third page

--- a/customers.html
+++ b/customers.html
@@ -133,26 +133,33 @@
                 <img class="join-img" src="images/Image Placeholder.png" alt="Placeholder">
                 <h3 class="join-item-title">Business</h3>
                 <p class="join-item-text">Cash Flow Asset Backed Receivables Finance</p>
-                <p class="join-item-text">Find the best business product</p>
+                <p class="join-item-text-one">Find the best business product</p>
             </li>
             <li class="join-item">
                 <img class="join-img" src="images/Image Placeholder1.png" alt="Placeholder1">
                 <h3 class="join-item-title">Enterprise</h3>
                 <p class="join-item-text">Site Acquisition Bridge Development Financing</p>
-                <p class="join-item-text">Find the best business product</p>
+                <p class="join-item-text-one">Find the best business product</p>
             </li>
         </ul>
    </div>
 </section>
-<section>
-    <div>
-    <h2>Join 100 Compannies who boost their business with Product</h2>
-    <button type="button">Get This</button>
-    <img src="images/graphics.png" alt="graphics">
+
+<!--#endregion section join  -->
+
+<!--#region section enterprise  -->
+
+<section class="enterprise">
+    <div class="enterprise-container container">   
+    <div class="enterprise-div">
+        <h2 class="enterprise-title">Join 100 Compannies who boost their business with Product</h2>
+        <button class="enterprise-bnt" type="button">Get This</button>
+    </div>
+     <img class="enterprise-img" src="images/graphics.png" alt="graphics">
 </div>
 </section>
 
-<!--#endregion section join  -->
+<!--#endregion section enterprise  -->
 
 </main>
 <footer class="footer">
