--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
                 </ul>
             </div>
         </section>
-        <!--Contents Strategies end-->
+         <!-- #endregion Contents Strategies -->
 
-        <!--Price Table-->
+        <!-- #region Price Table-->
 
         <section class="price">
             <div class="container price-container">
@@ -326,7 +326,7 @@
             </div>
         </section>
 
-        <!--Price Table end-->
+        <!-- #endregion Price Table -->
 
         <!--What Clients Say-->
 
